--- a/apps/leagues/templates/leagues/index.html
+++ b/apps/leagues/templates/leagues/index.html
@@ -4,29 +4,87 @@
 		<title>Sports Leagues</title>
 	</head>
 	<body>
-		<h1>Leagues</h1>
-		<ol>
-			{% for league in leagues %}
+		<h1>All Baseball Leagues</h1>
+			<ol>{% for league in baseball_leagues %}
 				<li>{{league.name}}</li>
-			{% empty %}
-				<p>No leagues found.  Try <code>python manage.py loaddata data.json</code>, or, if that doesn't work, going <a href="{% url 'make_data' %}">here</a> (but be prepared to wait).</p>
-			{% endfor %}
-		</ol>
-		<h1>Teams</h1>
-		<ol>
-			{% for team in teams %}
+				{% endfor %}
+			</ol>
+		<h1>All Womens' Leagues</h1>
+			<ol>{% for league in womens_leagues %}
+				<li>{{league.name}}</li>
+				{% endfor %}
+			</ol>
+
+		<h1>All Hockey Leagues</h1>
+			<ol>{% for league in hockey_leagues %}
+				<li>{{league.name}}</li>
+				{% endfor %}
+			</ol>
+		<h1>All Sports Other than Football</h1>
+			<ol>{% for league in other_than_football %}
+				<li>{{league.name}}</li>
+				{% endfor %}
+			</ol>		
+		<h1>All Conference Leagues</h1>
+			<ol>{% for league in conference_leagues %}
+				<li>{{league.name}}</li>
+				{% endfor %}
+			</ol>	
+		<h1>All Atlantic Based Leagues</h1>
+			<ol>{% for league in atlantic_leagues %}
+				<li>{{league.name}}</li>
+				{% endfor %}
+			</ol>	
+		<h1>Dallas Based Leagues</h1>
+			<ol>{% for team in dallas_teams %}
 				<li>{{team.location}} {{team.team_name}}</li>
-			{% empty %}
-				<p>No teams found.  Try <code>python manage.py loaddata data.json</code>, or, if that doesn't work, going <a href="{% url 'make_data' %}">here</a> (but be prepared to wait).</p>
-			{% endfor %}
-		</ol>
-		<h1>Players</h1>
-		<ol>
-			{% for player in players %}
+				{% endfor %}
+			</ol>	
+		<h1>Teams name the Raptors</h1>
+			<ol>{% for team in raptor_teams %}
+				<li>{{team.location}} {{team.team_name}}</li>
+				{% endfor %}
+			</ol>	
+		<h1>Teams Whose Location Includes "City"</h1>
+			<ol>{% for team in city_teams %}
+				<li>{{team.location}} {{team.team_name}}</li>
+				{% endfor %}
+			</ol>	
+		<h1>Teams that start with "T"</h1>
+			<ol>{% for team in starts_with_t %}
+				<li>{{team.location}} {{team.team_name}}</li>
+				{% endfor %}
+			</ol>	
+		<h1>Ordered by Location</h1>
+			<ol>{% for team in ordered_by_loc %}
+				<li>{{team.location}} {{team.team_name}}</li>
+				{% endfor %}
+			</ol>	
+		<h1>Ordered by Location</h1>
+			<ol>{% for team in reversed_by_loc %}
+				<li>{{team.location}} {{team.team_name}}</li>
+				{% endfor %}
+			</ol>
+		<h1>Players with last name "Cooper"</h1>
+			<ol>{% for player in last_name_cooper %}
 				<li>{{player.first_name}} {{player.last_name}}</li>
-			{% empty %}
-				<p>No teams found.  Try <code>python manage.py loaddata data.json</code>, or, if that doesn't work, going <a href="{% url 'make_data' %}">here</a> (but be prepared to wait).</p>
-			{% endfor %}
-		</ol>
+				{% endfor %}
+			</ol>	
+		<h1>Players with first name "Joshua"</h1>
+			<ol>{% for player in first_name_joshua %}
+				<li>{{player.first_name}} {{player.last_name}}</li>
+				{% endfor %}
+			</ol>	
+		<h1>Players with last name "Cooper" except those with first name "Joshua"</h1>
+			<ol>{% for player in cooper_no_joshua %}
+				<li>{{player.first_name}} {{player.last_name}}</li>
+				{% endfor %}
+			</ol>	
+		<h1>Players with the first name "Alexander" and "Wyatt"</h1>
+			<ol>{% for player in alexander_and_wyatt %}
+				<li>{{player.first_name}} {{player.last_name}}</li>
+				{% endfor %}
+			</ol>	
+	
 	</body>
 </html>
